<resources>
    <string name="app_name">Star Wars Character  Explorer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="character">Character</string>
    <string name="starship">Starship</string>
    <string name="planet">Planet</string>
    <string name="filter_characters_by_name">Filter characters by Name</string>
    <string name="filter_starships_by_name">Filter starships by Name</string>
    <string name="filter_planets_by_name">Filter planets by Name</string>
    <string name="full_name">FULL NAME</string>
    <string name="height">HEIGHT</string>
    <string name="homeworld">HOMEWORLD</string>
    <string name="hair_color">HAIR COLOR</string>
    <string name="eye_color">EYE COLOR</string>
    <string name="birth_year">BIRTH YEAR</string>
    <string name="skin_color">SKIN COLOR</string>
    <string name="mass">MASS</string>
    <string name="gender">GENDER</string>
    <string name="character_details">Character Details</string>
    <string name="starship_details">Starships Details</string>
    <string name="planet_details">Planet Details</string>
    <string name="model">Model</string>
    <string name="starship_class">Starship class</string>
    <string name="length">Length</string>
    <string name="cargo_capacity">Cargo capacity</string>
    <string name="passengers">Passengers</string>
    <string name="consumables">Consumables</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="crew">Crew</string>
    <string name="name">Name</string>
    <string name="rotation_period">Rotation period</string>
    <string name="orbital_period">Orbital period</string>
    <string name="diameter">Diameter</string>
    <string name="climate">Climate</string>
    <string name="gravity">Gravity</string>
    <string name="terrain">Terrain</string>
    <string name="surface_water">Surface water</string>
    <string name="population">Population</string>
</resources>